--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Junting Lu"
-description              : "Institute for SE @ PKU | Intern @ Bytedance"
+description              : "Institute for SE @ PKU | Seed @ Bytedance"
 repository               : "AL-377/AL-377.github.io"
 google_scholar_stats_use_cdn : true
 
